Some changes to event gaps, slightly smaller detail graph; added extra info for ?debug mode; Fixed BOM

--- a/src/network/network_style.css
+++ b/src/network/network_style.css
@@ -463,7 +463,7 @@
 
 .network-tooltip-legend table td
 {
-  padding: 3px 0;
+  padding: 3px;
 }
 
 .network-tooltip-legend .time_data
